Nuevo fondo + header semi terminado

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
     <title>Facundo Cozzani</title>
 </head>
 <body>
+
+    <video src="../images/fondo1.mp4" autoplay="true" muted="true" loop="true"></video>
+    
     <header class="header">
+
         <div class="header_mail">
             <a href="mailto:">
                 <figure>
@@ -20,10 +24,12 @@
 
         <h1 class="tittle">Facundo Cozzani</h1>
 
-        <button class="btn">Curriculum Vitae</button>
-
+        <span class="btn_download">
+            <a href="" download="">Descargar Curriculum</a>
+        </span>
 
     </header>
+
     <main class="main">
         <ul class="main_list">
             <li class="main_list_item">
@@ -42,7 +48,7 @@
                 </a>
             </li>
             <li class="main_list_item">
-                <a href="" target="_blank">
+                <a href="https://github.com/FatuKING" target="_blank">
                 <figure>
                 <img src="../images/icons8-github.svg" alt="">
                 </figure>
@@ -55,14 +61,6 @@
                 <img src="../images/icons8-linkedin-rodeado-de-círculo.svg" alt="">
                 </figure>
                 Likendin
-                </a>
-            </li>
-            <li class="main_list_item">
-                <a href="" target="_blank">
-                <figure>
-                <img src="../images/icons8-instagram.svg" alt="">
-                </figure>
-                Instagram
                 </a>
             </li>
         </ul>
